# podo-budget

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  DEPLOYMENT.md  INFRASTRUCTURE.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/rules/: architecture.md  backend.md  code-style.md  git.md  workflow.md
.github/workflows/: deploy-production.yml  deploy-staging.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  USER_ISOLATION_FIX_SUMMARY.md  alembic.ini  fly.toml  pytest.ini  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_indexes_and_fk_cascade.py  b7c8d9e0f1a2_float_to_numeric_for_monetary_fields.py  c3d4e5f6g7h8_add_incomes_table_and_category_type.py  d4e5f6g7h8i9_add_recurring_transactions_table.py  e5f6g7h8i9j0_add_sso_auth_user_id.py  ef6a56f45278_initial_schema.py  (+4 more)
backend/app/: main.py
backend/scripts/: import_feb.py  import_jan.py  import_jan_income.py  seed_data.py  update_users.py
backend/tests/: README.md  __init__.py  conftest.py
content/projects/: podonest.md
docs/: BOT_MESSAGES.md  CATEGORY_RULES.md  IMPLEMENTATION_STATUS.md  PRD.md  PRODUCT.md  ROADMAP.md  USER_FLOWS.md
docs/archive/: PRD_v2_deprecated.md
docs/operations/: PHASE0_CHECKLIST.md  deployment-strategy-summary.md  production-checklist.md
docs/plans/: 2026-02-14-ui-redesign-design.md  2026-02-14-ui-redesign-plan.md  2026-02-15-build-optimization-design.md  2026-02-15-e2e-tests-design.md  2026-02-15-income-design.md  2026-02-15-income-plan.md  2026-02-15-project-overhaul-design.md  2026-02-15-project-overhaul-plan.md  2026-02-15-pwa-design.md  2026-02-15-pwa-plan.md  2026-02-15-statistics-design.md  2026-02-15-statistics-plan.md  2026-02-16-income-form-recurring-design.md  2026-02-16-income-form-recurring-plan.md  2026-02-16-podo-budget-rebrand-design.md  2026-02-16-podo-budget-rebrand-plan.md  2026-02-22-deploy-notification-design.md  2026-02-22-deploy-notification-plan.md  2026-02-22-telegram-link-design.md  2026-02-22-telegram-link-plan.md
e2e/: playwright.config.ts
e2e/fixtures/: auth.ts
e2e/tests/: auth.spec.ts  dashboard.spec.ts  expenses.spec.ts  navigation.spec.ts
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  eslint.config.js  fly.toml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: _headers  _redirects
frontend/src/: App.tsx  index.css  main.tsx
scripts/: deploy-frontend.sh  deploy-init.sh
(+195 files in other folders)
