[project]
name = "homenrich"
version = "0.1.0"
description = "AI 가계부 - 채팅하듯 말하면 알아서 정리되는 가계부 앱"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy[asyncio]==2.0.25",
    "alembic==1.13.1",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "aiosqlite>=0.20.0",
    "python-multipart==0.0.6",
    "httpx==0.26.0",
    "anthropic>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "email-validator>=2.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0,<3.0",
    "resend>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pre-commit==4.1.0",
    "ruff==0.8.6",
    "detect-secrets==1.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 160
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import 정렬)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-length (ruff-format이 처리)
    "B008", # Depends() in function defaults (FastAPI 패턴)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
